--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="container">
+
+        <div>
+            <input type="text" id="search-input" placeholder="Search products..." oninput="searchProducts()">
+        </div>
         <h1>Products</h1>
         <div id="product-list"></div>
         <h2>Cart</h2>
@@ -17,3 +21,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
