--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-
+            <!-- Header Section -->
+        <header id="header">
+            <h1>E-Commerce Platform</h1>
+        </header>
         <div>
             <input type="text" id="search-input" placeholder="Search products..." oninput="searchProducts()">
         </div>
